--- a/guestbook/templates/namespaces.yaml
+++ b/guestbook/templates/namespaces.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: guestbook
+  name: guestbook2
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
