--- a/guestbook/templates/ingress.yaml
+++ b/guestbook/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "helm-guestbook.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.18-0" .Capabilities.KubeVersion.Version -}}
 apiVersion: networking.k8s.io/v1
 {{- else -}}
 apiVersion: extensions/v1beta1
